Se agrego el metodo GET

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "calculadora-IMC"
+    }
+  },
+  "defaultProject": "calculadora-IMC",
+  "cli": {
+    "analytics": false
+  }
 }
